--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "nuxt-auto-crud_template",
-  "version": "1.0.0",
+  "name": "nuxt-auto-crud-starter",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,25 +9,43 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck",
+    "test": "vitest",
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.74",
-    "@iconify-json/simple-icons": "^1.2.59",
-    "@nuxt/image": "^2.0.0",
+    "@iconify-json/lucide": "^1.2.75",
+    "@iconify-json/simple-icons": "^1.2.60",
     "@nuxt/ui": "^4.2.1",
-    "@nuxthub/core": "^0.9.0",
+    "@nuxthub/core": "^0.9.1",
+    "@types/pluralize": "^0.0.33",
+    "@unovis/ts": "^1.6.2",
+    "@unovis/vue": "^1.6.2",
+    "@vueuse/integrations": "^14.1.0",
+    "@vueuse/nuxt": "^13.9.0",
+    "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
     "nuxt": "^4.2.1",
-    "nuxt-auto-crud": "^1.2.2"
+    "nuxt-auth-utils": "^0.5.25",
+    "nuxt-auto-crud": "^1.8.0",
+    "pluralize": "^8.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
     "@nuxt/eslint": "^1.10.0",
+    "@nuxt/test-utils": "^3.20.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.5.0",
     "drizzle-kit": "^0.31.7",
     "eslint": "^9.39.1",
+    "jiti": "^2.6.1",
+    "nuxt-authorization": "^0.3.5",
+    "playwright-core": "^1.57.0",
     "typescript": "^5.9.3",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.1.5",
-    "wrangler": "^4.50.0"
-  },
-  "packageManager": "pnpm@10.23.0"
+    "wrangler": "^4.52.1"
+  }
 }
