--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.75",
     "@iconify-json/simple-icons": "^1.2.60",
+    "@nuxt/content": "^3.9.0",
+    "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.1",
     "@nuxthub/core": "^0.9.1",
     "@types/pluralize": "^0.0.33",
@@ -28,6 +30,7 @@
     "nuxt": "^4.2.1",
     "nuxt-auth-utils": "^0.5.25",
     "nuxt-auto-crud": "^1.12.1",
+    "nuxt-og-image": "^5.1.12",
     "pluralize": "^8.0.0",
     "zod": "^4.1.13"
   },
