--- a/content/2.pricing.yml
+++ b/content/2.pricing.yml
@@ -40,7 +40,7 @@ plans:
       - Template Setup & Configuration
       - Deployment Assistance
       - AI Chat Integration (Tawk.to)
-      - Custom Feature Development (Paid Add-on)
+      - Custom Feature Development (Paid)
       - Priority Email Support
   - title: Premium
     description: End-to-end managed solution for complete peace of mind.
