feat: Allow admin user password to be configured via environment variables, updating seeding logic and documentation.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Admin Email for Seeding
 NUXT_ADMIN_EMAIL=admin@example.com
+NUXT_ADMIN_PASSWORD=$1Password
 
 # Session Password (min 32 chars)
 NUXT_SESSION_PASSWORD=password-must-be-at-least-32-characters
