--- a/content/2.pricing.yml
+++ b/content/2.pricing.yml
@@ -1,5 +1,5 @@
-title: A plan for every need
-description: Our plans are designed to meet the requirements of both beginners and players. Get the right plan that suits you.
+title: Flexible Plans for Hobbyists, Developers & Businesses
+description: Whether you're a non-techie or a seasoned developer, we have options to support your journey.
 seo:
   title: Pricing
   description: Choose the plan that's right for you.
@@ -36,11 +36,11 @@ plans:
       label: Contact Sales
       to: mailto:clifordpereira@gmail.com
     features:
-      - Everything in Basic
-      - Template Setup & Configuration
-      - Deployment Assistance
+      - Turn your idea into web app
+      - Web App Setup & Configuration
       - AI Chat Integration (Tawk.to)
-      - Custom Feature Development (Paid)
+      - Deployment Assistance
+      - Custom Feature Development
       - Priority Email Support
   - title: Premium
     description: End-to-end managed solution for complete peace of mind.
@@ -73,14 +73,16 @@ faq:
   description: Everything you need to know about Nuxt Auto CRUD.
   items:
     - label: Which databases are supported?
-      content: Nuxt Auto CRUD works with any database supported by Drizzle ORM, including PostgreSQL, MySQL, SQLite, and Cloudflare D1.
-    - label: Can I customize the exposed APIs?
-      content: Yes! You can hook into lifecycle events to add custom logic before or after any CRUD operation, or completely override specific routes.
+      content: We have currently tested Nuxt Auto CRUD with SQLite only. Support for other Drizzle ORM compatible databases will be added in future updates.
+    - label: Can I create custom APIs?
+      content: Yes! The exposed APIs are suitable for most tasks. You can leverage them for standard operations, and for things like reports or analytics dashboards, you can build custom APIs exactly as you would in any other project.
     - label: How is authentication handled?
-      content: We provide built-in support for session-based and JWT authentication. You can easily integrate with your existing auth provider or use our default implementation.
-    - label: Is it suitable for production?
-      content: Absolutely. Nuxt Auto CRUD is built on top of battle-tested libraries like Drizzle ORM and H3, and includes features like validation and rate limiting out of the box.
+      content: We leverage 'nuxt-auth-utils' and 'nuxt-authorization' for robust session-based authentication. JWT authentication is also supported.
+    - label: How do I go from idea to production?
+      content: Check out our Quick Start Guide in the documentation (link in header) for a step-by-step workflow.
     - label: Can I use it with existing projects?
-      content: Yes, you can add Nuxt Auto CRUD to any existing Nuxt project. It's designed to work alongside your existing API routes and pages.
+      content: Yes, you can add Nuxt Auto CRUD to any existing Nuxt project. Check out the Installation Guide in the documentation (link in header) to get started.
     - label: Do you offer support?
-      content: Community support is available via GitHub Issues. For dedicated support and setup assistance, check out our Standard and Premium plans.
+      content: We have channels for community discussion on GitHub Discussions and Discord (links in footer). For paid support and setup assistance, please contact me at clifordpereira@gmail.com.
+    - label: Where can I report bugs?
+      content: If you find a bug or have a feature request, please open an issue on our GitHub repository (link in footer).
