--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -25,7 +25,7 @@ sections:
     orientation: horizontal
     reverse: false
     code: |
-      // server/database/schema/users.ts
+      // server/db/schema/users.ts
       import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 
       export const users = sqliteTable('users', {
