--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "lint": "eslint .",
     "typecheck": "nuxt typecheck",
     "test": "vitest",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "nuxt db generate"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.75",
     "@iconify-json/simple-icons": "^1.2.60",
+    "@libsql/client": "^0.15.15",
     "@nuxt/content": "^3.9.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.1",
-    "@nuxthub/core": "^0.9.1",
+    "@nuxthub/core": "^0.10.1",
     "@types/pluralize": "^0.0.33",
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
@@ -29,7 +30,7 @@
     "drizzle-orm": "^0.44.7",
     "nuxt": "^4.2.1",
     "nuxt-auth-utils": "^0.5.25",
-    "nuxt-auto-crud": "^1.16.1",
+    "nuxt-auto-crud": "^1.18.1",
     "nuxt-og-image": "^5.1.12",
     "pluralize": "^8.0.0",
     "zod": "^4.1.13"
