feat: Add D1 database migrations directory to wrangler config.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,10 +6,11 @@
 		"enabled": true
 	},
 	"d1_databases": [
-		{
-			"binding": "DB",
-			"database_name": "nac-template-db",
-			"database_id": "7f9f32d0-68c5-44ac-8a13-4928caefd799"
-		}
-	]
+    {
+      "binding": "DB",
+      "database_name": "nac-template-db",
+      "database_id": "7f9f32d0-68c5-44ac-8a13-4928caefd799",
+      "migrations_dir": "server/db/migrations/sqlite"
+    }
+  ]
 }
