--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/eslint": "^1.10.0",
+    "@nuxt/kit": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
