--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/kit": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^12.5.0",
@@ -51,6 +52,7 @@
     "jiti": "^2.6.1",
     "nuxt-authorization": "^0.3.5",
     "playwright-core": "^1.57.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.5"
