--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -8,9 +8,11 @@ runConfig:
   # memoryMiB: 512
 
 # Environment variables and secrets.
-# env:
+env:
   # Configure environment variables.
   # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
+  - variable: NUXT_HUB_DIR
+    value: /tmp
   # - variable: MESSAGE
   #   value: Hello world!
   #   availability:
