--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "playwright-core": "^1.57.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
+    "vercel": "^50.0.1",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.5"
   },
