--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typescript": "^5.9.3",
     "vercel": "^50.0.1",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.5"
+    "vue-tsc": "^3.1.5",
+    "wrangler": "^4.54.0"
   }
 }
