--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,11 @@
       }
     ],
   "observability": {
-    "enabled": true
+    "logs": {
+      "enabled": false,
+      "head_sampling_rate": 1,
+      "invocation_logs": true,
+      "persist": true
+    }
   }
 }
