--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/eslint": "^1.10.0",
+    "@nuxt/fonts": "^0.12.1",
     "@nuxt/kit": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
     "@tailwindcss/vite": "^4.1.18",
