feat: Implement forgot/reset password, add Google and GitHub OAuth, and introduce data export capabilities.

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,40 @@
 NUXT_ADMIN_EMAIL=admin@example.com
 NUXT_ADMIN_PASSWORD=$1Password
 
-# Session Password (min 32 chars)
-NUXT_SESSION_PASSWORD=password-must-be-at-least-32-characters
+# Public URL, used for OG Image when running nuxt generate
+NUXT_PUBLIC_SITE_URL=
+
+# GitHub OAuth
+NUXT_OAUTH_GITHUB_CLIENT_ID=
+NUXT_OAUTH_GITHUB_CLIENT_SECRET=
+
+# Google OAuth
+NUXT_OAUTH_GOOGLE_CLIENT_ID=
+NUXT_OAUTH_GOOGLE_CLIENT_SECRET=
+
+# Session Password (A random string of at least 32 characters)
+NUXT_SESSION_PASSWORD=
+
+
+# Mail Configuration 
+
+## In Development (Example settings for Ethereal.email)
+### Create a free account at https://ethereal.email/ to test password resets
+NUXT_NODEMAILER_HOST=smtp.ethereal.email
+NUXT_NODEMAILER_PORT=587
+NUXT_NODEMAILER_SECURE=false
+NUXT_NODEMAILER_USER=
+NUXT_NODEMAILER_AUTH_PASS=
+NUXT_NODEMAILER_FROM='"Nuxt Auto CRUD" <noreply@example.com>'
+
+
+## In Production
+# NUXT_NODEMAILER_HOST=smtp.resend.com
+# NUXT_NODEMAILER_PORT=465
+# NUXT_NODEMAILER_SECURE=true
+# NUXT_NODEMAILER_USER=resend
+# NUXT_NODEMAILER_AUTH_PASS=<your resend api key>
+
+# For cloudflare worker
+# NUXT_NODEMAILER_FROM='"Auth" <noreply@auto-crud.clifland.in>'
+# NUXT_RESEND_API_KEY=<API Key>
