--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "nuxt-auto-crud": "^1.21.0",
     "nuxt-og-image": "^5.1.12",
     "pluralize": "^8.0.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.3",
@@ -58,6 +61,8 @@
     "vercel": "^50.0.1",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.5",
-    "wrangler": "^4.54.0"
+    "wrangler": "^4.54.0",
+    "nodemailer": "^7.0.11",
+    "nuxt-nodemailer": "^1.1.4"
   }
 }
