--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@
 name = "nuxt-auto-crud-template"
 compatibility_date = "2024-11-27"
 
-compatibility_flags = ["nodejs_compat"]
+compatibility_flags = ["nodejs_compat_v2"]
 [[d1_databases]]
 binding = "DB"
 database_name = "nac-template-db"
