--- a/package.json
+++ b/package.json
@@ -1,69 +1,54 @@
 {
-  "name": "nuxt-auto-crud-starter",
+  "name": "playground",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "NODE_OPTIONS='--max-old-space-size=8192' nuxt build",
-    "dev": "nuxt dev",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "build": "nuxi build",
+    "dev": "nuxi dev --bun",
+    "preview": "nuxi preview --bun",
+    "postinstall": "nuxi prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck",
+    "typecheck": "nuxi typecheck",
     "test": "vitest",
-    "db:generate": "nuxt db generate",
-    "start": "node .output/server/index.mjs",
-    "migrate:remote": "npx wrangler d1 migrations apply nac-template-db --remote"
+    "db:generate": "nuxi db generate"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.75",
     "@iconify-json/simple-icons": "^1.2.60",
     "@libsql/client": "^0.15.15",
-    "@nuxt/content": "^3.9.0",
+    "@nuxt/content": "^3.8.2",
     "@nuxt/image": "^2.0.0",
-    "@nuxt/scripts": "^0.13.0",
     "@nuxt/ui": "^4.2.1",
     "@nuxthub/core": "^0.10.1",
-    "@types/pluralize": "^0.0.33",
-    "@unovis/ts": "^1.6.2",
-    "@unovis/vue": "^1.6.2",
-    "@vueuse/integrations": "^14.1.0",
+    "@standard-schema/spec": "^1.0.0",
     "@vueuse/nuxt": "^13.9.0",
     "bcryptjs": "^3.0.3",
-    "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.44.7",
-    "nuxt": "^4.2.1",
-    "nuxt-auth-utils": "^0.5.26",
-    "nuxt-auto-crud": "^1.21.0",
-    "nuxt-og-image": "^5.1.12",
-    "pluralize": "^8.0.0",
-    "zod": "^4.1.13",
+    "better-sqlite3": "^12.4.6",
+    "drizzle-orm": "^0.45.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
-    "xlsx": "^0.18.5"
+    "nuxt": "^4.2.1",
+    "nuxt-auth-utils": "^0.5.26",
+    "nuxt-authorization": "^0.3.5",
+    "nuxt-auto-crud": "^1.21.0",
+    "nuxt-og-image": "^5.1.12",
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/fonts": "^0.12.1",
-    "@nuxt/kit": "^4.2.1",
-    "@nuxt/test-utils": "^3.20.1",
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/better-sqlite3": "^7.6.13",
-    "better-sqlite3": "^12.5.0",
+    "@nuxt/scripts": "^0.13.2",
+    "@types/bcryptjs": "^3.0.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
-    "jiti": "^2.6.1",
-    "nuxt-authorization": "^0.3.5",
-    "playwright-core": "^1.57.0",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3",
-    "vercel": "^50.0.1",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.5",
-    "wrangler": "^4.54.0",
+    "happy-dom": "^20.0.11",
     "nodemailer": "^7.0.11",
-    "nuxt-nodemailer": "^1.1.4"
-  }
+    "nuxt-nodemailer": "^1.1.4",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.5",
+    "wrangler": "^4.53.0"
+  },
+  "packageManager": "bun@1.2.5"
 }
