--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "eslint": "^9.39.1",
     "happy-dom": "^20.0.11",
     "nodemailer": "^7.0.11",
+    "nuxt-delay-hydration": "^1.3.8",
     "nuxt-nodemailer": "^1.1.4",
+    "nuxt-security": "^2.5.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5",
     "wrangler": "^4.53.0"
