feat: add Cloudflare Workers static asset configuration

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,4 +12,6 @@ migrations_dir = "server/db/migrations/sqlite"
 [observability]
 enabled = true
 head_sampling_rate = 1
-
+[assets]
+directory = ".output/public"
+binding = "ASSETS"
