--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 # wrangler.toml
 name = "nuxt-auto-crud-template"
 compatibility_date = "2024-11-27"
+main = ".output/server/index.mjs"
 
 compatibility_flags = ["nodejs_compat"]
 [[d1_databases]]
