--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,8 @@
 # wrangler.toml
 name = "nuxt-auto-crud-template"
 compatibility_date = "2024-11-27"
+main = ".output/server/index.mjs"
+
 compatibility_flags = ["nodejs_compat"]
 [[d1_databases]]
 binding = "DB"
@@ -11,3 +13,7 @@ migrations_dir = "server/db/migrations/sqlite"
 [observability]
 enabled = true
 head_sampling_rate = 1
+
+[assets]
+directory = ".output/public"
+binding = "ASSETS"
