--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.75",
     "@iconify-json/simple-icons": "^1.2.60",
-    "@libsql/client": "^0.15.15",
     "@nuxt/content": "^3.8.2",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.1",
@@ -24,7 +23,6 @@
     "@standard-schema/spec": "^1.0.0",
     "@vueuse/nuxt": "^13.9.0",
     "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.4.6",
     "drizzle-orm": "^0.45.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
@@ -45,13 +43,15 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
     "happy-dom": "^20.0.11",
-    "nodemailer": "^7.0.11",
     "nuxt-delay-hydration": "^1.3.8",
     "nuxt-nodemailer": "^1.1.4",
     "nuxt-security": "^2.5.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5",
-    "wrangler": "^4.56.0"
+    "wrangler": "^3.99.0",
+    "better-sqlite3": "^11.5.0",
+    "nodemailer": "^6.9.16",
+    "@libsql/client": "^0.15.15"
   },
   "packageManager": "bun@1.2.5"
 }
