refactor: Improve password reset email generation, remove Nodemailer for local development, and update dependencies.

--- a/.env.example
+++ b/.env.example
@@ -18,24 +18,5 @@ NUXT_SESSION_PASSWORD=
 
 
 # Mail Configuration 
-
-## In Development (Example settings for Ethereal.email)
-### Create a free account at https://ethereal.email/ to test password resets
-NUXT_NODEMAILER_HOST=smtp.ethereal.email
-NUXT_NODEMAILER_PORT=587
-NUXT_NODEMAILER_SECURE=false
-NUXT_NODEMAILER_USER=
-NUXT_NODEMAILER_AUTH_PASS=
-NUXT_NODEMAILER_FROM='"Nuxt Auto CRUD" <noreply@example.com>'
-
-
-## In Production
-# NUXT_NODEMAILER_HOST=smtp.resend.com
-# NUXT_NODEMAILER_PORT=465
-# NUXT_NODEMAILER_SECURE=true
-# NUXT_NODEMAILER_USER=resend
-# NUXT_NODEMAILER_AUTH_PASS=<your resend api key>
-
-# For cloudflare worker
-# NUXT_NODEMAILER_FROM='"Auth" <noreply@auto-crud.clifland.in>'
-# NUXT_RESEND_API_KEY=<API Key>
+NUXT_EMAIL_FROM='"Auth" <noreply@auto-crud.clifland.in>'
+NUXT_RESEND_API_KEY=<API Key>
