--- a/package.json
+++ b/package.json
@@ -28,30 +28,28 @@
     "nuxt-auth-utils": "^0.5.26",
     "nuxt-authorization": "^0.3.5",
     "nuxt-auto-crud": "^1.21.0",
+    "nuxt-delay-hydration": "^1.3.8",
+    "nuxt-security": "^2.5.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@iconify-json/vscode-icons": "^1.2.37",
+    "@libsql/client": "^0.15.15",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/scripts": "^0.13.2",
     "@types/bcryptjs": "^3.0.0",
+    "better-sqlite3": "^11.5.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
     "happy-dom": "^20.0.11",
-    "nuxt-delay-hydration": "^1.3.8",
-    "nuxt-nodemailer": "^1.1.4",
-    "nuxt-security": "^2.5.0",
-    "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.5",
-    "wrangler": "^3.99.0",
-    "better-sqlite3": "^11.5.0",
-    "nodemailer": "^6.9.16",
-    "@libsql/client": "^0.15.15",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
-    "xlsx": "^0.18.5",
-    "nuxt-og-image": "^5.1.12"
+    "nuxt-og-image": "^5.1.12",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.5",
+    "wrangler": "^4.56.0",
+    "xlsx": "^0.18.5"
   },
   "packageManager": "bun@1.2.5"
 }
