refactor: Consolidate database migrations, update pricing plans and FAQs, and enable OG image support.

--- a/content/2.pricing.yml
+++ b/content/2.pricing.yml
@@ -5,61 +5,59 @@ seo:
   description: Choose the plan that's right for you.
 navigation.icon: i-lucide-credit-card
 plans:
-  - title: Basic
-    description: Perfect for developers who want to explore and build on their own.
+  - title: Community
+    description: For developers who want to build and host their own applications.
     price:
-      month: Free
-      year: Free
+      month: $0
+      year: $0
     button:
-      label: Get Started
+      label: Download Source
       color: neutral
       variant: subtle
       to: https://github.com/clifordpereira/nuxt-auto-crud
       target: _blank
     features:
-      - Automatic CRUD APIs
-      - Authentication
-      - Authorization
-      - Open Source Template
-      - Full Source Code Access
+      - Full Source Code (FOSS)
+      - Standard CRUD Operations
+      - Role-Based Access Control
+      - Database Schema Management
       - Community Support
-      - Self-Hosted
-      - Unlimited Projects
-  - title: Standard
-    description: Professional setup and support to get your application running smoothly.
+      - Self-Hosted only
+  - title: Managed Starter
+    description: Zero development fees. We build, host, and administer your custom application.
     price:
-      month: Contact
-      year: Contact
+      month: $49
+      year: $490
     highlight: true
     scale: true
     button:
-      label: Contact Sales
+      label: Get Started
       to: mailto:clifordpereira@gmail.com
     features:
-      - Turn your idea into web app
-      - Web App Setup & Configuration
-      - Custom Feature Development
-      - Deployment Assistance
-      - AI Chat Integration (Tawk.to)
-      - Priority Email Support
-      - One-time payment
-  - title: Premium
-    description: End-to-end managed solution for complete peace of mind.
+      - Custom App Initialization
+      - Managed Application Hosting
+      - Professional Administration
+      - Business Data Management
+      - Role-Based Access Control
+      - Daily Backups & Maintenance
+      - Email Support (48h response)
+  - title: Managed Pro
+    description: Active evolution and comprehensive administration of your custom application.
     price:
-      month: Contact
-      year: Contact
+      month: $99
+      year: $990
     button:
       label: Contact Sales
       color: neutral
       variant: subtle
       to: mailto:clifordpereira@gmail.com
     features:
-      - Everything in Standard
-      - Fully Managed Hosting
-      - Proactive Monitoring
-      - Security Updates
-      - Performance Optimization
-      - Dedicated Support Channel
+      - Everything in Starter
+      - Priority App Administration
+      - Performance Monitoring
+      - Routine Feature Tweaks
+      - Dedicated Slack/Discord Channel
+      - Professional Export Setup
 
 faq:
   title: Frequently asked questions
@@ -67,15 +65,19 @@ faq:
   items:
     - label: Which databases are supported?
       content: We have currently tested Auto Crud with SQLite only. Support for other Drizzle ORM compatible databases will be added in future updates.
-    - label: Can I create custom APIs?
-      content: Yes! The exposed APIs are suitable for most tasks. You can leverage them for standard operations, and for things like reports or analytics dashboards, you can build custom APIs exactly as you would in any other project.
-    - label: How is authentication handled?
-      content: We leverage 'nuxt-auth-utils' and 'nuxt-authorization' for robust session-based authentication. JWT authentication is also supported.
+    - label: Can I create custom features?
+      content: Yes! The built-in features are suitable for most data management tasks. You can leverage them for standard operations, and for things like reports or custom dashboards, we can build custom views exactly as your business needs.
+    - label: How is user sign-in and security handled?
+      content: We use enterprise-grade session management and secure logins. We also support multi-step verification and social logins (like Google or GitHub) to ensure your business data is only accessible by authorized users.
     - label: How do I go from idea to production?
       content: Check out our Quick Start Guide in the documentation (link in header) for a step-by-step workflow.
     - label: Can I use it with existing projects?
       content: Yes, you can add Auto Crud to any existing Nuxt project. Check out the Installation Guide in the documentation (link in header) to get started.
-    - label: Do you offer support?
-      content: We have channels for community discussion on GitHub Discussions and Discord (links in footer). For paid support and setup assistance, please contact me at clifordpereira@gmail.com.
-    - label: Where can I report bugs?
-      content: If you find a bug or have a feature request, please open an issue on our GitHub repository (link in footer).
+    - label: Do you charge for development?
+      content: No. Our managed plans are based on a subscription model where we handle the initial custom application setup, hosting, and ongoing administration for a flat monthly or yearly fee.
+    - label: Can I move from Community to a Managed plan?
+      content: Absolutely. If you've started with the open-source version and want us to take over the administration, hosting, and maintenance of your application, we can migrate your setup seamlessly.
+    - label: Is my application data secure?
+      content: Security and administration are at the core of our managed plans. We handle all software security patches, provide encrypted database environments, and perform daily backups to ensure your application remains healthy and safe.
+    - label: How do I request new features?
+      content: Our 'Managed Pro' plan is designed for applications that need active evolution. It includes routine feature tweaks as part of the administration service. For major architectural changes, we can discuss how to incorporate them into your managed plan. Contact clifordpereira@gmail.com for more details.
