--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "nuxt-auto-crud": "^1.21.0",
     "nuxt-delay-hydration": "^1.3.8",
     "nuxt-security": "^2.5.0",
+    "nuxt-og-image": "^5.1.12",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@libsql/client": "^0.15.15",
     "@nuxt/eslint": "^1.10.0",
@@ -45,7 +47,6 @@
     "happy-dom": "^20.0.11",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
-    "nuxt-og-image": "^5.1.12",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5",
     "wrangler": "^4.56.0",
