feat: add Google Tag Manager integration and update environment variable examples

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ NUXT_SESSION_PASSWORD=
 # Mail Configuration 
 NUXT_EMAIL_FROM='"Auth" <noreply@auto-crud.clifland.in>'
 NUXT_RESEND_API_KEY=<API Key>
+
+NUXT_PUBLIC_GA_ID=<Google Analytics ID>
+NUXT_PUBLIC_ADS_ID=<Google Ads ID>
