feat: Add settings status API and page to display environment variable configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,24 @@
-# Admin Email for Seeding
+# Session Password (for Authentication)
+NUXT_SESSION_PASSWORD="a-random-string-of-at-least-32-characters-long"
+
+# Admin Credentials for Seeding
 NUXT_ADMIN_EMAIL=admin@example.com
 NUXT_ADMIN_PASSWORD=$1Password
 
-# Public URL, used for OG Image when running nuxt generate
-NUXT_PUBLIC_SITE_URL=
-
-# GitHub OAuth
+# GitHub OAuth (Social Login)
 NUXT_OAUTH_GITHUB_CLIENT_ID=
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=
 
-# Google OAuth
+# Google OAuth (Social Login)
 NUXT_OAUTH_GOOGLE_CLIENT_ID=
 NUXT_OAUTH_GOOGLE_CLIENT_SECRET=
 
-# Session Password (A random string of at least 32 characters)
-NUXT_SESSION_PASSWORD=
-
-
-# Mail Configuration 
+# Mail Configuration (for reset password feature)
 NUXT_EMAIL_FROM='"Auth" <noreply@auto-crud.clifland.in>'
 NUXT_RESEND_API_KEY=<API Key>
 
-NUXT_PUBLIC_GA_ID=<Google Analytics ID>
-NUXT_PUBLIC_ADS_ID=<Google Ads ID>
+# Google Analytics
+NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=G-XXXXXXX
+
+# Google Ads
+NUXT_PUBLIC_SCRIPTS_GOOGLE_TAG_MANAGER_ID=GTM-XXXXXXX
