feat: Add quick install command UI to homepage and refresh content, including updated features.

--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -1,9 +1,10 @@
 title: Instant CRUD APIs for [Nuxt]{class="text-primary"}
-description: Expose RESTful CRUD APIs from your Drizzle ORM schema automatically. Write schema files, configure permissions, and focus on your business logic.
+description: Concentrate on system design, schemas, and permissions—not repetitive CRUD code. Write your Drizzle schemas and your APIs are instantly available. Fine-tune resource and column exposure in app.config.ts or through the admin panel.
 seo:
   title: Nuxt Auto CRUD - Instant APIs from Drizzle Schema
   description: Automatically expose RESTful CRUD APIs from your Drizzle ORM schema. Focus on your business logic, not boilerplate code.
 navigation: false
+command: npx nuxi init -t gh:clifordpereira/nuxt-auto-crud_template <project-name>
 hero:
   links:
     - label: Documentation
@@ -19,7 +20,7 @@ hero:
       to: https://github.com/clifordpereira/nuxt-auto-crud_template
       target: _blank
 sections:
-  - title: Build Apps by Just Writing Schemas
+  - title: Your App is Ready with Just Schemas
     description: Define your database schema using Drizzle ORM and let Nuxt Auto CRUD handle the rest. No manual API routes, no repetitive controller code.
     id: features
     orientation: horizontal
@@ -92,24 +93,27 @@ sections:
         description: 'moderator: Read-only access to most resources. Perfect for auditing and monitoring.'
         icon: i-lucide-eye
 features:
-  title: Stop Writing Boilerplate
-  description: Focus on building your product, not writing the same CRUD operations over and over again.
+  title: Core Features
+  description: A complete full-stack foundation with admin panel, authentication, and automatic CRUD APIs.
   items:
-    - title: Automatic Routes
-      description: Exposes GET, POST, PATCH, and DELETE endpoints for every table in your schema.
+    - title: Admin Dashboard
+      description: Ready-to-use admin panel with dynamic tables for all your schemas. Includes search, pagination, and export to PDF/Excel.
+      icon: i-lucide-layout-dashboard
+    - title: Dynamic Forms & Tables
+      description: Single robust components automatically handle all tables. Create, edit, delete operations work for any schema without writing code.
+      icon: i-lucide-table
+    - title: Automatic REST APIs
+      description: GET, POST, PATCH, DELETE endpoints for every table. Define schemas once, APIs are instantly available.
       icon: i-lucide-route
-    - title: Authentication
-      description: Built-in support for session-based and JWT authentication. Secure your APIs with ease.
+    - title: Built-in Authentication
+      description: Social login (GitHub, Google) and traditional email/password with registration and password reset flows.
       icon: i-lucide-shield-check
-    - title: Role Based Access
-      description: Define roles and permissions to control who can access and modify your data.
+    - title: Robust RBAC System
+      description: Manage roles and permissions directly in the admin panel. Control resource access with ease.
       icon: i-lucide-users
-    - title: Validation
-      description: Automatic request validation based on your Drizzle schema types.
-      icon: i-lucide-check-square
-    - title: Pagination and Search
-      description: Built-in query parameters for powerful search and pagination.
-      icon: i-lucide-search
+    - title: Zero Code Generation
+      description: Unlike other CRUD tools, no code bloat. One set of code handles unlimited tables through smart routing.
+      icon: i-lucide-zap
 
 testimonials:
   headline: Trusted by Developers
